2_k8s-dashboard/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-dashboard-forward-auth-mw
  namespace: kubernetes-dashboard
spec:
  forwardAuth:
    address: https://forward-auth.oauth.svc.cluster.local:4181
    trustForwardHeader: true
    authResponseHeaders:
    - X-Forwarded-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`k8s.${DDNS}`)
    kind: Rule
    middlewares:
    - name: kubernetes-dashboard-forward-auth-mw
    services:
    - name: kubernetes-dashboard
      port: 80
  tls:
    certResolver: ${RESOLVER}
